@@ -4,45 +4,36 @@
 # [1670] Design Front Middle Back Queue
 #
 # @lc code=start
-import java.util.LinkedList;
-
+import java.util.ArrayList;
 class FrontMiddleBackQueue {
-    LinkedList<Integer> q;
-
+    ArrayList<Integer> q;
     public FrontMiddleBackQueue() {
-        q = new LinkedList<>();
+        q = new ArrayList<>();
     }
-
     public void pushFront(int val) {
-        q.addFirst(val);
+        q.add(0, val);
     }
-
     public void pushMiddle(int val) {
-        int idx = q.size() / 2;
-        q.add(idx, val);
+        int mid = q.size() / 2;
+        q.add(mid, val);
     }
-
     public void pushBack(int val) {
-        q.addLast(val);
+        q.add(val);
     }
-
     public int popFront() {
         if (q.isEmpty()) return -1;
-        return q.removeFirst();
+        return q.remove(0);
     }
-
     public int popMiddle() {
         if (q.isEmpty()) return -1;
-        int idx = (q.size() - 1) / 2;
-        return q.remove(idx);
+        int mid = (q.size() - 1) / 2;
+        return q.remove(mid);
     }
-
     public int popBack() {
         if (q.isEmpty()) return -1;
-        return q.removeLast();
+        return q.remove(q.size() - 1);
     }
 }
-
 /**
 * Your FrontMiddleBackQueue object will be instantiated and called as such:
 * FrontMiddleBackQueue obj = new FrontMiddleBackQueue();
